# thinfer

./: .gitignore  LICENSE  README.md
projects/: Cargo.toml  clippy.toml  serve.toml
projects/.cargo/: config.toml
projects/thinfer-app/: Cargo.toml
projects/thinfer-app/assets/: ltx_rewrite_system_prompt.txt  t2v_rewrite_system_prompt.txt
projects/thinfer-app/src/: codec.rs  config.rs  download.rs  executor.rs  hunyuan.rs  lib.rs  ltx.rs  model.rs  preprocess.rs  progress.rs  remote.rs  request.rs  rewrite.rs  vault.rs  wire.rs
projects/thinfer-app/tests/: preprocess_parity.rs
projects/thinfer-cli/: Cargo.toml
projects/thinfer-cli/src/: main.rs
projects/thinfer-cli/src/cmd/: generate.rs  mod.rs  model.rs  vault.rs
projects/thinfer-conformance/: Cargo.toml
projects/thinfer-conformance/fixtures/: bf16p.safetensors  bf16w.safetensors  fp32.safetensors  spec.json
projects/thinfer-conformance/python/: pyproject.toml
projects/thinfer-conformance/python/thinfer_pytorch_ref/: gen_from_spec.py
projects/thinfer-conformance/src/: lib.rs
projects/thinfer-conformance/tests/: act_quant_i8.rs  coopmat.rs  dequant_i8.rs  dupup3d.rs  dwpose_onnx.rs  faceswap_onnx.rs  faceswap_pipeline.rs  matmul_i8.rs  matmul_i8_bf16.rs  native.rs  q4_0_matmul.rs  q8_0_matmul.rs  relpos_bias.rs  sdpa_i8.rs  sdpa_sg.rs  weight_prep.rs
projects/thinfer-conformance/tests/hunyuan/: dit_parity.rs  e2e.rs  i2v_e2e.rs  main.rs  parity_util.rs  perf.rs  refiner_parity.rs  vae_parity.rs  vae_tiling_parity.rs
projects/thinfer-conformance/tests/i8_common/: mod.rs
projects/thinfer-conformance/tests/ideogram4/: dit_parity.rs  e2e_parity.rs  encoder_parity.rs  main.rs  parity_util.rs  vae_parity.rs
projects/thinfer-conformance/tests/krea/: e2e.rs  main.rs
projects/thinfer-conformance/tests/ltx/: audio_vae_parity.rs  connector_parity.rs  dit_parity.rs  dit_perf.rs  e2e.rs  e2e_rapid.rs  encoder_parity.rs  encoder_perf.rs  main.rs  parity_util.rs  rapid_vae_encode_parity.rs  rapid_vae_parity.rs  rapid_vae_roundtrip.rs  upsampler_parity.rs  vae_parity.rs  vocoder_parity.rs
projects/thinfer-conformance/tests/qwen3_lm/: kv_generate.rs  load_smoke.rs  logits_parity.rs  main.rs
projects/thinfer-conformance/tests/qwen_image/: dit_parity.rs  dit_perf.rs  e2e.rs  edit_e2e.rs  encoder_edit_parity.rs  encoder_parity.rs  main.rs  parity_util.rs  vae_encode_parity.rs  vae_parity.rs  vision_parity.rs
projects/thinfer-conformance/tests/wan/: anyflow_e2e.rs  dreamidv_e2e.rs  longlive_e2e.rs  longlive_load.rs  longlive_multishot_e2e.rs  longlive_parity.rs  main.rs  video_e2e.rs  video_e2e_parity.rs  wan22_e2e.rs
projects/thinfer-conformance/tests/zimage/: dit_scatter.rs  e2e_parity.rs  main.rs  qwen3_parity.rs
projects/thinfer-core/: Cargo.toml
projects/thinfer-core/src/: arbiter.rs  cache.rs  conformance.rs  lib.rs  manifest.rs  mem.rs  module.rs  pipeline.rs  policy.rs  quant.rs  residency.rs  runtime.rs  sanity.rs  tensor.rs  tokenizer.rs  trace.rs  weight.rs  workspace.rs
projects/thinfer-core/src/backend/: mod.rs  poll.rs  wgpu.rs
projects/thinfer-core/src/format/: gguf.rs  mod.rs  pytorch.rs  safetensors.rs  union.rs
projects/thinfer-core/src/onnx/: exec.rs  fusion.rs  i8conv.rs  kernels.rs  mod.rs  proto.rs  shape.rs
projects/thinfer-core/src/ops/: act_quant.rs  add.rs  bcast_add.rs  bcast_affine.rs  bcast_fma.rs  bcast_modulate.rs  bcast_mul.rs  bf16_block_sum.rs  cast_act.rs  concat_time.rs  conv1d.rs  conv2d.rs  conv3d.rs  conv_transpose1d.rs  depth_to_space3d.rs  dequant.rs  dequant_i8.rs  dupup3d.rs  gated_head_mul.rs  gelu.rs  gelu_mul.rs  group_norm.rs  hunyuan_upsample3d.rs  layernorm.rs  matmul.rs  matmul_coopmat.rs  matmul_i8.rs  matmul_i8_bf16.rs  memcat.rs  mod.rs  mul.rs  pixel_norm3d.rs  qkv_split.rs  relpos_bias.rs  relu.rs  replicate_pad1d.rs  rmsnorm.rs  rmsnorm3d.rs  rmsnorm_gemma.rs  rope.rs  (+13 more)
projects/thinfer-core/tests/: dwpose_ops.rs
projects/thinfer-models/: Cargo.toml
projects/thinfer-models/src/: lib.rs
projects/thinfer-models/src/common/: autoencoder_kl.rs  block.rs  embedders.rs  loader.rs  lora.rs  mod.rs  rope_embedder.rs  seq.rs  vae_taehv.rs  vae_tiling.rs
projects/thinfer-models/src/faceswap/: detect.rs  dwpose.rs  enhancer.rs  image.rs  mod.rs  occluder.rs
projects/thinfer-models/src/hunyuan/: config.rs  dit.rs  encoder.rs  manifest.rs  mod.rs  refiner.rs  scheduler.rs  siglip.rs  vae.rs  vae_tiny.rs
projects/thinfer-models/src/ideogram4/: dit.rs  loader.rs  lora.rs  manifest.rs  mod.rs  mrope.rs  packing.rs  pipeline.rs  sampler.rs  t_embedder.rs  text_encoder.rs  vae.rs
projects/thinfer-models/src/krea/: dit.rs  loader.rs  lora.rs  manifest.rs  mod.rs  packing.rs  pipeline.rs  rope.rs  scheduler.rs  text_encoder.rs  vae.rs
projects/thinfer-models/src/ltx/: audio_vae.rs  cond.rs  connector.rs  dit.rs  loader.rs  lora.rs  manifest.rs  mod.rs  patchify.rs  pipeline.rs  sampler.rs  text_encoder.rs  upsampler.rs  video_vae.rs  vocoder.rs
projects/thinfer-models/src/qwen3_lm/: forward.rs  generate.rs  mod.rs
projects/thinfer-models/src/qwen_image/: dit.rs  loader.rs  lora.rs  mod.rs  (+7 more)
projects/thinfer-native/: Cargo.toml
projects/thinfer-native/src/: cache.rs  lib.rs  tokenizer.rs
projects/thinfer-serve/: Cargo.toml
projects/thinfer-serve/src/: api.rs  config.rs  crypto.rs  job.rs  main.rs  uploads.rs  vault.rs  web.rs  worker.rs
projects/thinfer-serve/web/: app.js  index.html  style.css
projects/thinfer-web/: Cargo.toml  package.json  pnpm-lock.yaml  tsconfig.json  webdriver.template.json
projects/thinfer-web/scripts/: resolve-wasm-import.ts  test.ts
projects/thinfer-web/src/: bindings.rs  download.ts  engine.ts  index.ts  lib.rs  opfs-worker.ts  opfs.ts  trace_bridge.rs  types.ts  wasm-pkg.d.ts  wasm.ts  weight_file.rs
projects/thinfer-web/tests/: web_ops.rs
projects/thinfer-working-area/: agent-notes.md  dreamidv-plan.md  faceswap-plan.md  hunyuan-plan.md  hy15-causal-plan.md  ltx-plan.md  ltx2-rapid-plan.md  orig-plan.md  plan-details.md  possible-models.md  qwen-image-plan.md  wan-plan.md  worklog.md  zimage-plan.md
(+81 files in other folders)
