[workspace]
resolver = "2"
members = [
    "thinfer-core",
    "thinfer-native",
    "thinfer-web",
    "thinfer-cli",
    "thinfer-models",
    "thinfer-conformance",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/cretz/thinfer"
publish = false

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter", "std", "tracing-log"] }
