[workspace]
resolver = "2"
members = [
    "thinfer-core",
    "thinfer-native",
    "thinfer-web",
    "thinfer-cli",
    "thinfer-models",
    "thinfer-conformance",
]
# Vendored wgpu facade crate carrying our web-subgroups patch (see
# vendor/README.md). Excluded from the workspace; consumed via [patch] below.
exclude = ["vendor"]

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/cretz/thinfer"
publish = false

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter", "std", "tracing-log"] }

# Browser wasm blob (`pnpm build:wasm`). Runtime perf first (opt-level 3
# inherited from release, NOT z/s), size second; keeps the normal `release`
# profile fast to build for the native dev loop.
[profile.wasm-release]
inherits = "release"
lto = "fat"
codegen-units = 1
panic = "abort"

# THINFER-PATCH(web-subgroups #5555): substitute the wgpu facade crate with our
# in-repo vendor carrying the web-subgroups feature mapping. wgpu-core/hal/types/
# naga stay crates.io 29. See vendor/README.md.
[patch.crates-io]
wgpu = { path = "vendor/wgpu-29.0.3" }
