[package]
name = "thinfer-conformance"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

# Conformance suite: shared Python reference (under python/), committed
# safetensors fixtures (under fixtures/), and the native test driver.
# Web mirror lives in thinfer-web/tests/web_ops.rs and consumes the same
# committed fixtures via include_bytes!.

[dependencies]
thinfer-core = { path = "../thinfer-core", features = ["conformance", "trace-subscriber"] }
serde_json = "1"

[dev-dependencies]
half = "2"
png = "0.17"
pollster = "0.4"
safetensors = "0.4"
tempfile = "3"
thinfer-models = { path = "../thinfer-models" }
thinfer-native = { path = "../thinfer-native" }
tokio = { version = "1", features = ["macros", "rt"] }
tracing = { workspace = true }

[features]
# Conformance test suite. Opt-in because each test regenerates a fixture
# via `uv run` (python + torch import) and spins up WgpuBackend, so a
# default `cargo test --workspace` shouldn't trigger them. CI invokes
# `cargo test -p thinfer-conformance --features conformance`.
conformance = []
# Opt-in Z-Image end-to-end tests that touch the local HF cache. Skip
# cleanly if the relevant files aren't cached; never trigger a download.
zimage-e2e = []
# Opt-in SkyReels-V2 (Wan) video end-to-end parity test. Same discipline as
# zimage-e2e: touches the local HF cache, skips cleanly when uncached.
wan-e2e = []
# Opt-in Ideogram-4 parity tests (encoder, DiT, VAE, e2e). Same discipline:
# touches the local HF cache (GGUFs), skips cleanly when uncached.
ideogram4-e2e = []
# Opt-in Qwen-Image-Edit-Rapid-AIO parity tests (VAE, encoder, DiT, e2e). Same
# discipline: touches the local HF cache (GGUFs), skips cleanly when uncached.
qwen-image-e2e = []
# Opt-in face-swap ONNX executor parity + pipeline e2e. Resolves the FaceFusion
# ONNX models from the HF cache; compares the thinfer ONNX executor against
# onnxruntime goldens. Skips cleanly when goldens/models are absent.
faceswap-e2e = []
# Opt-in LTX-2.3 parity tests (Gemma encoder + FE V2, connector, VAE, DiT, e2e).
# Needs the unsloth LTX-2.3 + gemma QAT GGUF bundle in cache + `uv`.
ltx-e2e = []
# Opt-in HunyuanVideo 1.5 (480p T2V) parity tests (VAE, encoder, refiner, DiT,
# e2e). Same discipline: touches the local HF cache, skips cleanly when uncached.
hunyuan-e2e = []
# Opt-in native prompt-rewriter (Qwen3-VL-8B-Instruct) load-smoke test. Loads the
# cached Q5_K_M GGUF, audits tensor names/shapes, registers all weights. GPU-free.
# Same discipline: touches the local HF cache, skips cleanly when uncached.
qwen3-lm = []
