[package]
name = "thinfer-serve"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[[bin]]
name = "thinfer-serve"
path = "src/main.rs"

# Long-running HTTP host: a typed OpenAPI job API over thinfer-app's
# LocalExecutor. One serial GPU => async job queue + worker pool (default 1),
# in-memory job metadata, on-disk artifacts, no DB. Heavy async deps (axum,
# utoipa) are isolated to this crate.

[dependencies]
thinfer-app = { path = "../thinfer-app", features = ["serve"] }
thinfer-core = { path = "../thinfer-core" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync", "signal"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
utoipa = { version = "5", features = ["axum_extras"] }
async-stream = "0.3"
futures-core = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
# Result encryption at rest: hybrid RSA-OAEP (wraps a per-job AES key) so the
# server can encrypt with the client's public key but never decrypt. The browser
# holds the private key.
rsa = "0.9"
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
# Optional HTTPS (so the browser gets a secure context for WebCrypto over LAN).
# ring crypto provider to avoid the aws-lc-rs C build; rcgen mints a self-signed
# cert at startup when enabled.
axum-server = { version = "0.7", default-features = false, features = ["tls-rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rcgen = { version = "0.13", default-features = false, features = ["pem", "ring"] }
