[package]
name = "thinfer-web"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
thinfer-core = { path = "../thinfer-core" }
tracing = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
console_error_panic_hook = "0.1"
safetensors = "0.4"
half = { version = "2", features = ["bytemuck"] }
thinfer-core = { path = "../thinfer-core", features = ["conformance"] }
