[package]
name = "thinfer-web"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
thinfer-core = { path = "../thinfer-core" }
thinfer-models = { path = "../thinfer-models" }
tracing = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
# `unstable_wasm` builds the HF tokenizer without onig/native deps; same
# parse/encode behavior as thinfer-native's `HfTokenizer`.
tokenizers = { version = "0.21", default-features = false, features = [
    "unstable_wasm",
] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
console_error_panic_hook = "0.1"
safetensors = "0.4"
half = { version = "2", features = ["bytemuck"] }
thinfer-core = { path = "../thinfer-core", features = ["conformance"] }
# Test-only adapter-acquisition timeout: a hung `requestAdapter()` (e.g.
# GPU-less CI runner) must fail loudly, not stall to the job timeout.
gloo-timers = { version = "0.3", features = ["futures"] }
futures-util = { version = "0.3", default-features = false }
